updating media query: working making the table display correctly on small screens

--- a/style.css
+++ b/style.css
@@ -132,7 +132,7 @@ table a:hover {
 }
 
 .fa {
-  margin: 40px;
+  margin: 0 40px 40px 40px;
 }
 
 /* Styling the footer */
@@ -169,5 +169,14 @@ footer {
   .row .text-right, .row .text-left {
     margin: 20px 0;
     text-align: center;
+  }
+  .table {
+    padding: 5px;
+  }
+  /*.table h3 {
+    padding: 40px 80px;
+  }*/
+  .fa {
+    margin: 0 5px 20px 5px;
   }
 }
